--- a/landing-pages/airwallex.yml
+++ b/landing-pages/airwallex.yml
@@ -2,3 +2,4 @@ slug: airwallex
 title: Revenue Based Finance For Founders Like You.
 description: Supercharged funding from £10K to £2M for your marketing & inventory purchases.
 image: ./../src/images/test.png
+buttonColor: "#afa"
