changed folder structure

--- a/landing-pages/airwallex.yml
+++ b/landing-pages/airwallex.yml
@@ -1,5 +1,5 @@
 slug: airwallex
 title: Revenue Based Finance For Founders Like You.
 description: Supercharged funding from £10K to £2M for your marketing & inventory purchases.
-image: ./../src/images/test.png
+image: ./../images/test.png
 buttonColor: "#afa"
