--- a/landing-pages/blazon.yml
+++ b/landing-pages/blazon.yml
@@ -1,13 +1,13 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: sitruna
+slug: blazon
 
 # Set this to true when you want to publish the page
 published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "sitruna"
+partnerLogo: "blazon"
 partnerLogoCard: "sitruna-card"
 
 colors: {
@@ -16,35 +16,40 @@ colors: {
     # Color used as background in dark sections
 
     # Card colors
-    card: { bg: "#f6f5e9", font: "#353640", elements: "#faf" },
+    card: { bg: "#005450", font: "#f6f5e9", elements: "#ffc776" },
     font:
       {
         heading: "#353640",
         inverseHeading: "#fff",
         body: "#353640",
-        inverseBody: "#C6C6C6",
+        inverseBody: "#f6f5e9",
       },
-    button: { bg: "", text: "" },
+    button: { bg: "#005450", text: "#fff" },
     iconSection: { icon: "#005450", bg: "#fafafa" },
-    darkSection: { bg: "#005450", text: "", button: { bg: "", text: "" } },
+    darkSection:
+      {
+        bg: "#005450",
+        text: "#fff",
+        button: { bg: "#ffc776", text: "#005450" },
+      },
   }
 
 # This color will be used for buttons and colord titles
-themeColor: "#FED357"
+themeColor: "#F200F6"
 
 # Color used as background in dark sections
-darkBgColor: "#000"
+darkBgColor: "#333"
 
 # Card colors
-card: { backgroundColor: "#000", fontColor: "#fff" }
+card: { backgroundColor: "#0A213B", fontColor: "#fff" }
 
 fontColor:
   {
-    heading: "#000",
+    heading: "#0C2542",
     inverseHeading: "#fff",
-    body: "#222",
+    body: "#1C3654",
     inverseBody: "#C6C6C6",
-    button: "#000",
+    button: "#fff",
   }
 
 # Content
