--- a/landing-pages/blazon.yml
+++ b/landing-pages/blazon.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "blazon"
-partnerLogoCard: "sitruna-card"
+partnerLogoCard: "blazon-card"
 
 colors: {
     theme: "#005450",
@@ -26,10 +26,10 @@ colors: {
       },
     button: { bg: "#005450", text: "#fff" },
     iconSection: { icon: "#005450", bg: "#fafafa" },
-    darkSection:
-      {
+    darkSection: {
         bg: "#005450",
         text: "#fff",
+        # BG color here updates the lines in the revenue illustration
         button: { bg: "#ffc776", text: "#005450" },
       },
   }
@@ -57,11 +57,11 @@ first:
   {
     title:
       {
-        firstLine: "Revenue Based Finance",
-        secondLine: "For Amazon Businesses",
+        firstLine: "Is marketing and inventory capital holding your business back from its true potential?",
+        secondLine: "",
       },
 
-    description: "As Amazon experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Sitruna Finance offers a new way to help you fund your Amazon brand with funding from £10K to £2M.",
+    description: "With Blazon’s Funding Package, securing ad spend can be a problem of the past.",
 
     button: "Get funded",
   }
@@ -99,15 +99,15 @@ third:
 fourth:
   {
     title: "Repay On Your Terms",
-    description: "Repayments are automatically made from a pre-agreed percentage of your revenue, so you can focus 100% on your business.",
+    description: "Repayments are automatically made from a pre-agreed percentage of your revenue, so you can <b>focus 100% on your business.</b>",
     button: "Get funded",
   }
 
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Sitruna Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "Sitruna Finance offers a new way to help you fund your Amazon brand.",
+    description: "We provide a quick, stress-free funding solution so that your efforts can be focused on driving growth at scale. Utilize your funding effectively to reduce the cost of acquiring your leads and increase your return on ad spend. There is no better time to cut through the noise and bring the attention to your brand that it deserves.",
+    statement: "Don’t miss your opportunity to receive up to £2M for advertising inventory in as fast as 24 hours!",
   }
 
 sixth:
