--- a/landing-pages/template.yml
+++ b/landing-pages/template.yml
@@ -11,22 +11,22 @@ partnerLogo: "templateLogo"
 partnerLogoCard: "templateLogoCard"
 
 colors: {
-    theme: "#005450",
-    page: "#f6f5e9",
+    theme: "#faf",
+    page: "#fff",
     # Color used as background in dark sections
 
     # Card colors
-    card: { bg: "#f6f5e9", font: "#353640", elements: "#faf" },
+    card: { bg: "#000", font: "#fff", elements: "#faf" },
     font:
       {
-        heading: "#353640",
+        heading: "#000",
         inverseHeading: "#fff",
-        body: "#353640",
-        inverseBody: "#C6C6C6",
+        body: "#222",
+        inverseBody: "#ccc",
       },
-    button: { bg: "", text: "" },
-    iconSection: { icon: "#005450", bg: "#fafafa" },
-    darkSection: { bg: "#005450", text: "", button: { bg: "", text: "" } },
+    button: { bg: "#faf", text: "#222" },
+    iconSection: { icon: "#faf", bg: "#fafafa" },
+    darkSection: { bg: "#000", button: { bg: "#faf", text: "#222" } },
   }
 
 # This color will be used for buttons and colord titles
