--- a/landing-pages/template.yml
+++ b/landing-pages/template.yml
@@ -13,6 +13,8 @@ partnerLogoCard: "templateLogoCard"
 colors: {
     theme: "#faf",
     page: "#fff",
+
+    navbarBg: "", # If nothing present, page color will be used
     # Color used as background in dark sections
 
     # Card colors
@@ -24,27 +26,9 @@ colors: {
         body: "#222",
         inverseBody: "#ccc",
       },
-    button: { bg: "#faf", text: "#222" },
+    button: { bg: "#faf", text: "#fff" },
     iconSection: { icon: "#faf", bg: "#fafafa" },
-    darkSection: { bg: "#000", button: { bg: "#faf", text: "#222" } },
-  }
-
-# This color will be used for buttons and colord titles
-themeColor: "#F200F6"
-
-# Color used as background in dark sections
-darkBgColor: "#333"
-
-# Card colors
-card: { backgroundColor: "#0A213B", fontColor: "#fff" }
-
-fontColor:
-  {
-    heading: "#0C2542",
-    inverseHeading: "#fff",
-    body: "#1C3654",
-    inverseBody: "#C6C6C6",
-    button: "#fff",
+    darkSection: { bg: "#000", button: { bg: "#faf", text: "#fff" } },
   }
 
 # Content
