--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "framer-motion": "^6.2.8",
     "gatsby": "^4.9.3",
+    "gatsby-plugin-google-gtag": "^4.13.0",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-mdx": "^3.9.1",
