--- a/landing-pages/template.yml
+++ b/landing-pages/template.yml
@@ -8,14 +8,13 @@ published: false
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "templateLogo"
-partnerLogoCard: "templateLogoCard"
+partnerLogoCard: ""
 
 colors: {
     theme: "#faf",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
-    # Color used as background in dark sections
 
     # Card colors
     card: { bg: "#000", font: "#fff", elements: "#faf" },
