--- a/landing-pages/kia-ora.yml
+++ b/landing-pages/kia-ora.yml
@@ -1,6 +1,6 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: kia_ora
+slug: kia-ora
 
 # Set this to true when you want to publish the page
 published: False
