--- a/landing-pages/kia-ora.yml
+++ b/landing-pages/kia-ora.yml
@@ -7,7 +7,7 @@ published: True
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Kia_ora"
+partnerLogo: "Kia-Ora"
 partnerLogoCard: ""
 
 colors: {
