--- a/landing-pages/nextsmartship.yml
+++ b/landing-pages/nextsmartship.yml
@@ -25,9 +25,9 @@ colors: {
         body: "#222",
         inverseBody: "#ccc",
       },
-    button: { bg: "#faf", text: "#fff" },
-    iconSection: { icon: "#faf", bg: "#fafafa" },
-    darkSection: { bg: "#000", button: { bg: "#faf", text: "#fff" } },
+    button: { bg: "#000000", text: "#fff" },
+    iconSection: { icon: "#000000", bg: "#fafafa" },
+    darkSection: { bg: "#000", button: { bg: "#000000", text: "#fff" } },
   }
 
 # Content
