--- a/landing-pages/nextsmartship.yml
+++ b/landing-pages/nextsmartship.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "NSS2"
-partnerLogoCard: "NSS"
+partnerLogo: "NSS3"
+partnerLogoCard: "NSS3"
 
 colors: {
     theme: "#0554F2",
