--- a/landing-pages/gembah.yml
+++ b/landing-pages/gembah.yml
@@ -1,18 +1,18 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: template
+slug: gembah
 
 # Set this to true when you want to publish the page
 published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "templateLogo"
+partnerLogo: "gembah-logo"
 partnerLogoCard: ""
 
 colors: {
-    theme: "#faf",
-    page: "#fff",
+    theme: "#42445c",
+    page: "#fec72f",
 
     navbarBg: "", # If nothing present, page color will be used
 
