--- a/landing-pages/gembah.yml
+++ b/landing-pages/gembah.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000", font: "#fff", elements: "#faf" },
+    card: { bg: "#FFF", font: "#000", elements: "#fec72f" },
     font:
       {
         heading: "#000",
