--- a/landing-pages/finoptimal.yml
+++ b/landing-pages/finoptimal.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: ""
-partnerLogoCard: ""
+partnerLogo: "FO-WHITE"
+partnerLogoCard: "FO-WHITE"
 
 colors: {
     theme: "#2F0052",
