--- a/landing-pages/finoptimal.yml
+++ b/landing-pages/finoptimal.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "FO-WHITE"
-partnerLogoCard: "FO-WHITE"
+partnerLogo: "FinOptimal"
+partnerLogoCard: "FinOptimal-card"
 
 colors: {
     theme: "#2F0052",
@@ -33,7 +33,11 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As eCommerce experts, we know that having the capital to pay for inventory, marketing, or proper accounting is a huge barrier to growth for any brand. Finoptimal Finance (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $2M.",
 
