--- a/landing-pages/gembah.yml
+++ b/landing-pages/gembah.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "gembah-logo"
-partnerLogoCard: ""
+partnerLogo: "gembah"
+partnerLogoCard: "gembah-card"
 
 colors: {
     theme: "#fec72f",
@@ -33,7 +33,11 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As manufacturing experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Gembah Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
