--- a/landing-pages/nextsmartship.yml
+++ b/landing-pages/nextsmartship.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "NSS3"
-partnerLogoCard: "NSS4"
+partnerLogo: "nextsmartship"
+partnerLogoCard: "nextsmartship-card"
 
 colors: {
     theme: "#0554F2",
@@ -33,10 +33,13 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As eCommerce experts, we know that having the capital to pay for logistics, inventory, or marketing is a huge barrier to growth for any brand. Next Smart Ship Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $2M.",
-
     button: "Get funded",
   }
 second:
