--- a/landing-pages/jingsourcing.yml
+++ b/landing-pages/jingsourcing.yml
@@ -36,7 +36,7 @@ first:
     title:
       {
         firstLine: "Revenue Based Finance",
-        secondLine: "For Amazon Businesses",
+        secondLine: "For eCommerce Businesses",
       },
 
     description: "As Sourcing experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Jing Sourcing Capital offers a new way to help you fund your eCommerce brand with funding from $10K to $2M.",
