--- a/landing-pages/jingsourcing.yml
+++ b/landing-pages/jingsourcing.yml
@@ -25,7 +25,7 @@ colors: {
         body: "#222",
         inverseBody: "#ccc",
       },
-    button: { bg: "#FED357", text: "#222" },
+    button: { bg: "#ff9933", text: "#222" },
     iconSection: { icon: "#FED357", bg: "#fafafa" },
     darkSection: { bg: "#000", button: { bg: "#FED357", text: "#222" } },
   }
