--- a/landing-pages/jingsourcing.yml
+++ b/landing-pages/jingsourcing.yml
@@ -93,7 +93,7 @@ sixth:
     title: "We fund online businesses who",
     list:
       [
-        "Sell products on Amazon",
+        "Sell products online",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
