--- a/landing-pages/finoptimal.yml
+++ b/landing-pages/finoptimal.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "FinOptimal"
-partnerLogoCard: "FinOptimal-card"
+partnerLogoCard: "FinOptimal"
 
 colors: {
     theme: "#2F0052",
