--- a/landing-pages/borderl3ss.yml
+++ b/landing-pages/borderl3ss.yml
@@ -33,7 +33,7 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "First line", secondLine: "Second line" },
+    title: { firstLine: "Revenue Based Finance", secondLine: "for eCommerce Businesses" },
 
     description: "As eCommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Borderl3ss Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $2M.",
 
