--- a/landing-pages/borderl3ss.yml
+++ b/landing-pages/borderl3ss.yml
@@ -11,13 +11,13 @@ partnerLogo: "borderl3ss-card"
 partnerLogoCard: "borderl3ss-card"
 
 colors: {
-    theme: "#faf",
+    theme: "#0d0e33",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000", font: "#fff", elements: "#00d689" },
+    card: { bg: "#545453", font: "#0d0e33", elements: "#00d689" },
     font:
       {
         heading: "#000",
