--- a/landing-pages/maverick.yml
+++ b/landing-pages/maverick.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "maverick"
-partnerLogoCard: "maverick"
+partnerLogoCard: "maverick-white"
 
 colors: {
     theme: "#23323e",
