--- a/landing-pages/template2.yml
+++ b/landing-pages/template2.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "Outfund-dark-blue"
-partnerLogoCard: ""
+partnerLogoCard: "Outfund-white-light"
 
 colors: {
     theme: "#0D2C4F",
