--- a/landing-pages/template2.yml
+++ b/landing-pages/template2.yml
@@ -27,7 +27,7 @@ colors: {
       },
     button: { bg: "#FF766B", text: "#fff" },
     iconSection: { icon: "#FF766B", bg: "#fafafa" },
-    darkSection: { bg: "#000", button: { bg: "##FF766B", text: "#fff" } },
+    darkSection: { bg: "#fafafa", button: { bg: "#FF766B", text: "#fff" } },
   }
 
 # Content
