--- a/landing-pages/maverick.yml
+++ b/landing-pages/maverick.yml
@@ -20,7 +20,7 @@ colors: {
     card: { bg: "#000", font: "#fff", elements: "#23323e" },
     font:
       {
-        heading: "#fff",
+        heading: "#000",
         inverseHeading: "#fff",
         body: "#222",
         inverseBody: "#ccc",
