--- a/landing-pages/zendrop.yml
+++ b/landing-pages/zendrop.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Outfund-dark-blue"
-partnerLogoCard: "Outfund-white-light"
+partnerLogo: "zendrop"
+partnerLogoCard: ""
 
 colors: {
     theme: "#6857ab",
