--- a/landing-pages/zendrop.yml
+++ b/landing-pages/zendrop.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "zendrop"
-partnerLogoCard: ""
+partnerLogoCard: "zendrop"
 
 colors: {
     theme: "#6857ab",
