--- a/landing-pages/gembah.yml
+++ b/landing-pages/gembah.yml
@@ -12,9 +12,9 @@ partnerLogoCard: "gembah-card"
 
 colors: {
     theme: "#fec72f",
-    page: "#42445c",
+    page: "#fff",
 
-    navbarBg: "", # If nothing present, page color will be used
+    navbarBg: "#42445c", # If nothing present, page color will be used
 
     # Card colors
     card: { bg: "#42445c", font: "#fff", elements: "#fec72f" },
@@ -25,9 +25,9 @@ colors: {
         body: "#222",
         inverseBody: "#ccc",
       },
-    button: { bg: "#fec72f", text: "#fff" },
+    button: { bg: "#fec72f", text: "#42445c" },
     iconSection: { icon: "#fec72f", bg: "#fafafa" },
-    darkSection: { bg: "#000", button: { bg: "fec72f", text: "#fff" } },
+    darkSection: { bg: "#42445c", button: { bg: "#fec72f", text: "#42445c" } },
   }
 
 # Content
