--- a/landing-pages/jingsourcing.yml
+++ b/landing-pages/jingsourcing.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "jinglogo"
-partnerLogoCard: "jingcard"
+partnerLogo: "jingsourcing"
+partnerLogoCard: "jingsourcing-card"
 
 colors: {
     theme: "#ff9933",
