--- a/landing-pages/owd.yml
+++ b/landing-pages/owd.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "owd"
-partnerLogoCard: "owd"
+partnerLogoCard: "owd-card"
 
 colors: {
     theme: "#0D2C4F",
@@ -33,7 +33,11 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As brand fulfillment experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. One World Direct Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
