--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "shipmonklogo"
-partnerLogoCard: "shipmonklogo"
+partnerLogo: "templateLogo"
+partnerLogoCard: "templateLogo"
 
 colors: {
     theme: "##eeeeed",
@@ -33,7 +33,11 @@ colors: {
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As eCommerce experts, we know that having the capital to pay for inventory, logistics, or marketing is a huge barrier to growth for any brand. Shipmonk Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
