--- a/landing-pages/template2.yml
+++ b/landing-pages/template2.yml
@@ -7,33 +7,34 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Outfund-dark-blue"
-partnerLogoCard: "Outfund-white-light"
+partnerLogo: "Outfund-dark"
+partnerLogoCard: "Outfund-light"
 
 colors: {
-    theme: "#0D2C4F",
+    theme: "#00A3D7",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#0D2C4F", font: "#fff", elements: "#18CCD8" },
+    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "#00A3D7" },
     font:
       {
-        heading: "#000",
-        inverseHeading: "#0D2C4F",
-        body: "#222",
-        inverseBody: "#ccc",
+        heading: "#0C2542",
+        inverseHeading: "#F2F6FA",
+        body: "#1C3654",
+        inverseBody: "#F2F6FA",
       },
-    button: { bg: "#FF766B", text: "#fff" },
-    iconSection: { icon: "#FF766B", bg: "#fafafa" },
-    darkSection: { bg: "#fafafa", button: { bg: "#FF766B", text: "#0D2C4F" } },
+    button: { bg: "#00A3D7", text: "#fff" },
+    iconSection: { icon: "#00A3D7", bg: "#F2F6FA" },
+    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
   }
 
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+    title:
+      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
 
     description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
