--- a/landing-pages/fingate.yml
+++ b/landing-pages/fingate.yml
@@ -27,7 +27,7 @@ colors: {
         body: "#270050",
         inverseBody: "#fff",
       },
-    button: { bg: "#8D47B3", text: "#fff" },
+    button: { bg: "#ED702D", text: "#fff" },
     iconSection: { icon: "#ED702D", bg: "#f5f5f5" },
     darkSection: { bg: "#010A46", button: { bg: "#ED702D", text: "#fff" } },
   }
