--- a/landing-pages/fabrikator-outfund.yml
+++ b/landing-pages/fabrikator-outfund.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "fabrikator-dark"
-partnerLogoCard: "fabrikator-white"
+partnerLogo: "fabrikator_dark"
+partnerLogoCard: "fabrikator_white"
 
 colors: {
     theme: "#10325F",
