--- a/landing-pages/fabrikator-outfund.yml
+++ b/landing-pages/fabrikator-outfund.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "fabrikator_dark"
-partnerLogoCard: "fabrikator_white"
+partnerLogoCard: ""
 
 colors: {
     theme: "#10325F",
