--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "shipmonk"
-partnerLogoCard: "templateLogo"
+partnerLogoCard: "shipmonk"
 
 colors: {
     theme: "##eeeeed",
