--- a/landing-pages/anyday.yml
+++ b/landing-pages/anyday.yml
@@ -1,6 +1,6 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: anyday.yml
+slug: anyday
 
 # Set this to true when you want to publish the page
 published: true
