--- a/landing-pages/anyday.yml
+++ b/landing-pages/anyday.yml
@@ -7,11 +7,11 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "anyday"
+partnerLogo: "anyday2"
 partnerLogoCard: "Outfund-light"
 
 colors: {
-    theme: "#00A3D7",
+    theme: "#7C377a",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
