--- a/landing-pages/mpsh1.yml
+++ b/landing-pages/mpsh1.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "mpsh-logo"
-partnerLogoCard: "mpsh-card"
+partnerLogo: "mpsh-logo1"
+partnerLogoCard: "mpsh-card1"
 
 colors: {
     theme: "#00A3D7",
